--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Encabezado con estética futurista -->
         <header class="p-6 text-center rounded-t-2xl border-b-2 border-neon-cyan">
             <h1 class="text-4xl md:text-5xl font-extrabold tracking-widest text-neon-cyan drop-shadow-neon-cyan">
-                // DATASTREAM: CUBAN HERALDRY //
+                // simbolos y atributos de la patria //
             </h1>
             <p class="mt-2 text-lg font-light text-gray-400">Identidad Nacional | Acceso 00.A</p>
         </header>
